fix: overflow of vertical images in page view (#364)
* fix: added rules to hide overflow of vertical image

* fix: updated release note

* fix: updated release note

* fix: removed max-height from header pic

---------

--- a/src/theme/ItaliaTheme/Components/_pageHeader.scss
+++ b/src/theme/ItaliaTheme/Components/_pageHeader.scss
@@ -7,7 +7,6 @@
 
   .header-image {
     max-width: 16em;
-    max-height: 8em;
   }
 
   .link-list-wrapper .link-list {
